# scotty-todo-sample

./: .gitignore  README.md  cabal.sandbox.config  scotty-todo.cabal
src/: App.hs  Database.hs  Main.hs  Types.hs
src/Routes/: GetTodos.hs
static/: require-config.js  require.js
static/html/: index.html
static/js/: ]  app.jsx
static/js/lib/: json-over-http.js  underscore.string.js
test/: DatabaseSpec.hs
