name:                scotty-todo
version:             0.1.0.0
synopsis:            Scotty todo sample
description:         Todo application sample using scotty
license:             PublicDomain
license-file:        LICENSE
author:              Karun
maintainer:          karun012@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable scotty-todo
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7, scotty, monad-logger ==0.3.0, resourcet, wai-middleware-static, wai-extra, aeson, bytestring, data-default, text, mtl, stm, containers, http-types
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  default-language:    Haskell2010
  HS-Source-Dirs:      test, src
  build-depends:       base >=4.6 && <4.7, QuickCheck, hspec, aeson, bytestring
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
  main-is:             Spec.hs
